tests/dataset/tpc-ds/compiler/pl/q21.error
run: exit status 2
ERROR: /tmp/q21.pl:58: user:main </2: Type error: `[]' expected, found `"2000-03-01"' (a string) ("x" must hold one character)
